--- a/node_frontend/package.json
+++ b/node_frontend/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "serialport": "latest",
     "colors": "latest",
-    "yargs": "~1.3.3"
+    "yargs": "~1.3.3",
+    "byline": "~4.2.1"
   }
 }
